--- a/arcade.html
+++ b/arcade.html
@@ -65,6 +65,7 @@
         #satisfaction-meter {
             position: absolute;
             bottom: 20%;
+            display: none;
             left: 50%;
             transform: translateX(-50%);
             width: 80%;
@@ -236,13 +237,12 @@
         <div id="satisfaction-meter">
             <div id="satisfaction-fill"></div>
         </div>
-        <div id="stars-display"></div>
         <div id="chatbot-layer">
             <span id="chatbot-icon">🤖</span>
             <span>AI Chatbot Layer</span>
         </div>
         <div id="level-message"></div>
-        <div id="paddle">👩🏽‍💼👨🏻‍💼👩🏿‍💻👨🏼‍💻👩🏻‍💼</div>
+        <div id="paddle">👩🏽‍💼👨🏻‍💼👩🏿‍💻👨🏼‍💻👩🏻‍💼<br/><div id="stars-display"></div></div>
         <div id="future-ideas">
             <h2>Future Development Ideas</h2>
             <ul>
