layout histogram and future ideas

--- a/arcade.html
+++ b/arcade.html
@@ -155,7 +155,7 @@
             background-color: white;
             padding: 20px;
             border-radius: 10px;
-            width: 80%;
+            width: 70%;
             max-height: 80%;
             overflow-y: auto;
             display: none;
@@ -209,27 +209,27 @@
         <div id="time-container">Time: <span id="time">08:00</span></div>
         <div id="histogram-container">
             <div class="histogram-bar">
-                <div class="histogram-label">⭐⭐⭐⭐⭐</div>
+                <div class="histogram-label">5⭐</div>
                 <div class="histogram-value" id="histogram-5"></div>
                 <div class="histogram-count" id="count-5">0</div>
             </div>
             <div class="histogram-bar">
-                <div class="histogram-label">⭐⭐⭐⭐</div>
+                <div class="histogram-label">4⭐</div>
                 <div class="histogram-value" id="histogram-4"></div>
                 <div class="histogram-count" id="count-4">0</div>
             </div>
             <div class="histogram-bar">
-                <div class="histogram-label">⭐⭐⭐</div>
+                <div class="histogram-label">3⭐</div>
                 <div class="histogram-value" id="histogram-3"></div>
                 <div class="histogram-count" id="count-3">0</div>
             </div>
             <div class="histogram-bar">
-                <div class="histogram-label">⭐⭐</div>
+                <div class="histogram-label">2⭐</div>
                 <div class="histogram-value" id="histogram-2"></div>
                 <div class="histogram-count" id="count-2">0</div>
             </div>
             <div class="histogram-bar">
-                <div class="histogram-label">⭐</div>
+                <div class="histogram-label">1⭐</div>
                 <div class="histogram-value" id="histogram-1"></div>
                 <div class="histogram-count" id="count-1">0</div>
             </div>
