--- a/arcade.html
+++ b/arcade.html
@@ -113,6 +113,7 @@
             border-radius: 5px;
             font-size: 0.8rem;
             display: none;
+            z-index: 300;
         }
         .histogram-bar {
             display: flex;
@@ -155,7 +156,7 @@
             background-color: white;
             padding: 20px;
             border-radius: 10px;
-            width: 70%;
+            width: 80%;
             max-height: 80%;
             overflow-y: auto;
             display: none;
